--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -26,7 +26,7 @@
 
 </head>
 
-<body onload="requestContent()">
+<body onload="requestContent();">
 <div id="wrapper">
     <!-- Sidebar -->
     <div id="sidebar-wrapper">
@@ -221,5 +221,7 @@
         async defer></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/mouse0270-bootstrap-notify/3.1.7/bootstrap-notify.min.js"></script>
 </body>
+
+
 
 </html>
